feat: creating general specification by post request
