# app/controllers/general_specifications_controller.rb
@@ -1,6 +1,7 @@
 class GeneralSpecificationsController < SpecificationsController
   def create
-    @general_specification = GeneralSpecification.new(general_specification_params)
+    @product = Product.find(params[:product_id])
+    @general_specification = @product.general_specifications.new(general_specification_params)
 
     if @general_specification.save
       render json: @general_specification, status: :created, location: @general_specification
